Changes & fixes made 2nde part June. See for changes: https://docs.google.com/document/d/1zrrv7-MEZWnpovO4MH9_jeNC8WW5kaKFK7VfPTIfXbI/edit?usp=sharing

--- a/bicemodded/localisation/english/TW_events_l_english.yml
+++ b/bicemodded/localisation/english/TW_events_l_english.yml
@@ -1695,27 +1695,51 @@
  japan.3888.d:0 "[broke_london_treaty.GetName] has stayed with the treaty untill now but has now used the escalator clause to leave the London Naval Treaty."
  japan.3888.a:0 "Okay"
  
+ japan.390.t:0 "Tibet in Co-Prosperity Sphere?"
+ japan.390.d:0 "Now that China has been fully aligned with our goals, we should get Tibet to join the Co-Prosperity Sphere to further strengthen the unity of the Asian peoples. We could demonstrate our benevolence by also offering to return some provinces of the old Tibetan Empire which are still inhabitated by many Tibetans today. And well, some more dividing and conquering to keep the Chinese in check is also a benefit!\nWhat shall we offer to Tibetan leadership in exchange for joining out alliance?"
+ japan.390.a:0 "Offer to return Ganzi."
+ japan.390.b:0 "Offer to return Ganzi & Qinhai."
+ japan.390.c:0 "They should submit without any concessions!"
+ japan.400.t:0 "An interesting proposal from [JAP.GetNameDef]"
+ japan.400.d:0 "Japanese delegates have come to us with the following offer: the province of Ganzi will be returned to us if we accept our accession into Co-Prosperity Sphere. While the price we would have to pay is Japanese dominion over us and a likely involvement in their wars, this would restore some of the old lands of Tibet and guarantee the continued existence our state. The question is whether there are even any other alternatives which aren't way worse in the long run?"
+ japan.400.a:0 "Accept their proposal."
+ japan.400.b:0 "Japanese are going to lose the war. Don't accept their proposal."
+ japan.410.t:0 "A very interesting proposal from [JAP.GetNameDef]"
+ japan.410.d:0 "Japanese delegates have come to us with the following offer: the provinces of Ganzi and Qinhai will be returned to us if we accept our accession into Co-Prosperity Sphere. While the price we would have to pay is Japanese dominion over us and a likely involvement in their wars, this would restore the old lands of Tibet and guarantee the continued existence our state. The question is whether there are even any other alternatives which aren't way worse in the long run?"
+ japan.410.a:0 "Accept their proposal."
+ japan.410.b:0 "Japanese are going to lose the war. Don't accept their proposal."
  japan.39.t:0 "[JAP.GetName] Demands Submission"
- japan.39.d:0 "[JAP.GetNameDef] sees Tibet as Chinese mainland territory. They demand our full and immediate annexation."
- japan.39.a:0 "They are too powerful to resist"
+ japan.39.d:0 "[JAP.GetNameDef] has requested that Tibet formally joins the Greater East Asian Co-Prosperity Sphere and their struggle gainst imperialism. They demand our full and immediate cooperation, or else..."
+ japan.39.a:0 "They are too powerful to resist."
  japan.39.b:0 "The Dalai Lama will never submit!"
- japan.40.t:0 "Tibet Compromise"
- japan.40.d:0 "The Dalai Lama has agreed to our terms. Tibet is ours now."
- japan.40.a:0 "Tibet shall be ours!"
+ japan.40.t:0 "Tibet Accepts"
+ japan.40.d:0 "The Dalai Lama has agreed to our terms. Tibet is on our side now."
+ japan.40.a:0 "Tibet shall prosper!"
  japan.41.t:0 "Tibet Refused"
  japan.41.d:0 "The Tibetan leader rejected our generous offer. They claim that they will never submit to our 'tyranny'."
  japan.41.a:0 "We will see about that..."
  
  japan.42.t:0 "[JAP.GetName] Demands Submission"
- japan.42.d:0 "[JAP.GetNameDef] sees Tibet as Chinese Mainland territory. They demand our full and immediate annexation."
- japan.42.a:0 "They are too powerful to resist"
- japan.42.b:0 "The warlords will never submit!"
- japan.43.t:0 "Sinkiang Compromise"
- japan.43.d:0 "The warlords have agreed to our terms. Sinkiang is ours now."
- japan.43.a:0 "Sinkiang shall be ours!"
- japan.44.t:0 "Sinkiang Refused"
- japan.44.d:0 "The Sinkiang warlords rejected our generous offer. They claim that they will never submit to our 'tyranny'."
- japan.44.a:0 "We will see about that..."
+ japan.42.d:0 "As [JAP.GetNameDef] has come to dominate the Chinese Mainland, it was to be expected they one day would want to expand their reach to Sinkiang. Today is that day, as Japanese envoys came to demand our full and immediate cooperation. Effectively this means the submission of our economy, resources and armies to Japan... We could refuse tough, given Soviet support is likely in case of a Japanese attack. However instead of directly attacking us, Japan could use its contacts with Uyghur leaders to forment rebellion instead..."
+ japan.42.a:0 "We cannot count on Soviet support, nor risk rebellion..."
+ japan.42.b:0 "We'll take our chances!"
+ japan.43.t:0 "[SIK.GetLeader] Submits!"
+ japan.43.d:0 "The warlord has agreed to our terms. [SIK.GetName] is in our sphere now."
+ japan.43.a:0 "Our reach extends ever further!"
+ japan.44.t:0 "[SIK.GetLeader] Refused"
+ japan.44.d:0 "The warlord of Sinkiang has rejected our generous offer. He seems assured he can count on outside support if we were to act against him...\nWe have a few options on how to proceed: we could attack directly, however doing so could result in direct intervention from the Soviet Union and high casualties from the fighting in the harsh terrain. The more practical way forward is supporting an Turkic uprising in Sinkiang, which once victorious will submit to our protection. We could of course also let the issue rest for now and leave sinking as a buffer state..."
+ japan.44.a:0 "Invade Sinkiang, Banzai!"
+ japan.44.b:0 "The Turks will prove worthy allies!"
+ japan.44.c:0 "Let it rest...for now"
+ 
+ japan.4400.t:0 "[SIK.GetLeader] Requests Support"
+ japan.4400.d:0 "This week another Uyghur revolt broke out in Sinkiang and just like in 1934 and 1937 [SIK.GetLeader] is depending on our support to maintain control. The rebellion this time seems to be better organized and supplied than the previous ones, likely they are receiving outside support. Some of our agents and [SIK.GetLeader] suspect that [JAP.GetNameDef] is supporting the rebels in order to gain control of the region, while avoiding the risks more direct action would entail.\n While the region is within our sphere of influence and serves strategically as a buffer protecting our frontiers in Central Asia, we have pressing issues at hand elsewhere too. We could still send some reifnforcements, weapons and advisors while reducing trade with Japan. If we are to support [SIK.GetLeader] once more, it is on the condition that the province of Sinkiang becomes an autonomous Soviet Socialist Republic once the rebellion is crushed, to ensure long term stability..."
+ japan.4400.a:0 "Send support to Sinkiang and sanction Japan"
+ japan.4400.b:0 "We can't afford this right now..."
+ japan.4401.t:0 "Support from the Soviets arrives"
+ japan.4401.d:0 "[SOV.GetLeader] has sent us reinforcements to help crush the current Uyghur uprising. However it is on the condition that the province of Sinkiang becomes an autonomous Soviet Socialist Republic once the rebellion is crushed, to ensure long term stability..."
+ japan.4401.a:0 "This will contribute greatly to the war against the Uyghurs."
+ SIK_SUP_SOV_tt:0 "4 infantry divisions will arrive in Sinkiang.\n"
  
  japan.45.t:0 "Shanxi border conflict lost!"
  japan.45.d:0 "Our skirmishers were routed back across the border, this is a shameful defeat!"
