--- a/bicemodded/localisation/english/decisions_TW_l_english.yml
+++ b/bicemodded/localisation/english/decisions_TW_l_english.yml
@@ -437,13 +437,37 @@
  develop_benghasi_desc:0 "Benghasi is the second largest city and is well suited for a protected harbour. Mussolini visited the city in 1937 and the large Benghazi Cathedral was finished in 1939."
  
  incorporate_zara:0 "Incorporate Zara"
- incorporate_zara_desc:0 "With the Treaty of Versailles (10 January 1920) Italian claims on Dalmatia contained in the Treaty of London were nullified, but later on the agreements between the Kingdom of Italy and the Kingdom of Serbs, Croats and Slovenes set in the Treaty of Rapallo (12 November 1920) gave Zara with other small local territories to Italy. The Zara enclave included the city of Zara, the municipalities of Boccagnazzo/Bokanjac, Borgo Erizzo/Arbanasi, Cerno, part of Dicolo/Diklo and the islands of Lagosta and Pelagosa. The territory was organized into a small Italian province but the different factions from surrounding countries living in the area proved to be a challange. We need to increase the Italian dominance in the area to solidify the Italianization"
- italianize_ljubljana:0 "Italianize Ljubjana"
- italianize_ljubljana_desc:0 "If only..."
+ incorporate_zara_desc:0 "In the final peace treaties ending the Great War, the Italian claims on Dalmatia contained in the Treaty of London were nullified, but later on the agreements between the Kingdom of Italy and the Kingdom of Serbs, Croats and Slovenes set in the Treaty of Rapallo (12 November 1920) gave Zara with other small local territories to Italy. The territory around Zara was organized into a small Italian province, yet with the many different groups living there it hasn't been the most calm part of the our empire. However now that our authrity over the area has been strengthened, Zara can now be fully integrated."
+ ITA_Claim_Slovenia:0 "Start Italianizing Slovenia"
+ iITA_Claim_Slovenia_desc:0 "If only..."
+ italianize_ljubljana:0 "Finalize the Italinisation of Slovenia"
+ italianize_ljubljana_desc:0 "Now that the region is properly pacified and Italianized, we can integrate it into [Root.GetNameDef] fully"
  italianize_dalmatia:0 "Italianize Dalmatia"
- italianize_dalmatia_desc:0 "If only..."
- italianize_islands:0 "Italianize Ionian Islands"
- italianize_islands_desc:0 "If only..."
+ italianize_dalmatia_desc:0 "The Republic of Venice between the 9th century and 1797 controlled Dalmatia, but then it was conquered by Napoleon. After the fall of Napoleon Istria, the islands of Kvarner and Dalmatia were annexed to the Austrian Empire. However many Istrian Italians and Dalmatian Italians looked with sympathy towards the Risorgimento movement that fought for the unification of Italy. Even after the unification of Italy and the many wars against Austria, Dalmatia remained out our reach and as such was subject to Germanization and Slavization policies. Now we can finally reverse this injustices!"
+ ita_claim_corsica:0 "Start Italianizing Corsica"
+ ita_claim_corsica_desc:0 "In the 18th century the French tricked the Genoese in ceding the island of Corsica. It is time to correct this mistake of history!"
+ italianize_corsica:0 "Integrate Corsica"
+ italianize_corsica_desc:0 "Our previous efforts to Italianize Corsica have paid off, it should now be fully re-integrated."
+ italianize_Malta:0 "Integrate Malta"
+ italianize_Malta_desc:0 "At the end of the Napoleonic Wars the treacherous British annexed Malta with the Treaty of Paris, while Italy remained weak and divided. Now that this injustice is undone, we should integrate Malta into its true homeland!"
+ ITA_Claim_Dodecanese:0 "Further the Italianization of the Dodecanese"
+ ITA_Claim_Dodecanese_desc:0 "The governor of the Dodecanese and a staunch fascist, Cesare De Vecchi, has since the beginning of his tenure in 1936 enforced strong Italianization policies on the Dodecanese Islands. Italian colonists also have been arriving in ever greater numbers since 1930s. These efforts are starting to pay off now..."
+ ITA_Core_Dodecanese:0 "Complete Italianization of the Dodecanese"
+ ITA_Core_Dodecanese_desc:0 "The strategically important Dodecanese Islands are ready to fully integrated into the Imperium."
+ ITA_Claim_Aegean_Islands:0 "Start Italianization of the Aegean islands"
+ ITA_Claim_Aegean_Islands_desc:0 "Many of the Aegean Isands were once part of the Genoese or Venetian empires and as such should be integrated into 'Italia Imperiale'!"
+ ITA_Core_Aegean_Islands:0 "Complete Italianization of the Aegean Islands"
+ ITA_Core_Aegean_Islands_desc:0 "Like the Dodecanese, the other Agean Islands are now to be an part integral to the Imperium."
+ ITA_Claim_Crete:0 "Start Italianizing of the Crete"
+ ITA_Claim_Crete_desc:0 "Crete is an essential part of the 'arch' stretching from Dalamazia to the Ionian Islands till the Dodecanese and such need to be made integral part of the Italian Empire."
+ ITA_Core_Crete:0 "Finish the Italianization of Crete"
+ ITA_Core_Crete_desc:0 "Although the Venetians lost Crete to the Turks in 1669, we can now fully reverse this fluke of history!"
+ incorporate_Savoy:0 "Pacify the French occupation zone"
+ incorporate_Savoy_desc:0 "Let´s Initiate the process to formally annex our ancient Savoyard homelands and the area around it. We still have to work to do in quenching some resistance and integrating the region back into our state."
+ Core_Savoy:0 "Integrate Savoia"
+ Core_Savoy_desc:0 "We shall formally annex Savoia, Nizza and the Western Alps. Italia sarà redenta!"
+ Seize_Dalmatia:0 "Assume direct control over Dalamazia"
+ Seize_Dalmatia_desc:0 "The Mare Nostrum is our ancient birthright, the entire Adriatic coastline must therefore be in our hands. We can now fully implement the 1915 Treaty of London, graciously relieving our old 'Allies' of any guilt over unkept promises. The Vittoria Mutilata shall be undone!"
  ###ITA###
 
  break_the_london_naval_treaty:0 "Break the London naval treaty"
