--- a/bicemodded/localisation/english/diplomacy_l_english.yml
+++ b/bicemodded/localisation/english/diplomacy_l_english.yml
@@ -563,7 +563,7 @@
  OUR_FEAR:0 "Our fear of them: $FEAR|H$"
  THEIR_FEAR:0 "Their fear of us: $FEAR|H$"
  troops_on_our_borders:0 "Troops on our borders:"
- puppet_opinion:0 "Puppet:"
+ puppet_opinion:0 "Puppet"
  puppet_active:0 "is master of"
  fleets_on_our_borders:0 "Fleets on our borders:"
  long_term_trade_partner:0 "Trade partners"
