--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -2914,7 +2914,8 @@ USA_preemptive_deals_desc:0 "We need to stop Venezuela from selling oil to possi
  hk_air_focus:0 "Air Defenses"
  hk_air_focus_desc:0 "We must expand and improve the anti-air emplacements in Hong Kong greatly."
  uk_free_india_focus:0 "Indian Independence"
- uk_free_india_focus_desc:0 "Japan is actively fomenting rebellion in India and has even formed a 'National Indian Army' composed of Indian recruits. The situation could grow dangerous if nothing is done to prevent it. We can either defeat Japan quickly, or promise the Indians independence in a few years."
+ uk_free_india_focus_desc:0 "Ever since the end of the Great War the degree of autonomy of the Raj should have, has been an contentious issue in both Britain and India itself. Now that we're again in a world wide conflict and with Japan actively fomenting rebellion in India, the situation could grow dangerous if nothing is done to prevent it. We can either defeat Japan quickly, or promise the Indians greater independence in a few years."
+ uk_free_india_tt:0 "§4We will promise the Indians independence in 2 years. If we in the end go through with this, the Raj will either become a Dominion if still a colony or entirely independent otherwise.§!"
  
  ## ENG air focuses ##
  ENG_air_bases:0 "Airbase Effort"
@@ -7130,7 +7131,7 @@ JAP_control_north:0 "Control of Northern Area"
  JAP_dive_bomb:0 "German Jet Technology Transfer"
  JAP_dive_bomb_desc:0 "The Germans have accepted to share their jet studies with us, one of our subs is getting the documents for us. I hope nobody will sink it on the way home..."
  force_to_join_focus:0 "Pressure Sinkiang and Tibet"
- force_to_join_focus_desc:0 "China is completly under the control of the Emperor. Sinkiang and Tibet will have no choice but to fall under our influence." 
+ force_to_join_focus_desc:0 "China is completly under the control of the Emperor. Sinkiang and Tibet will have no choice but to fall under our influence. We can entice Tibet to join us by offering to restore some of their ancestral lands. As for Sinkiang, if their current leadership doesn't concede, we could always incite the surpressed Turks into rebellion. Given our support, they'll make for eager allies!" 
  war_in_asia_focus:0 "Steel and Fire"
  war_in_asia_focus_desc:0 "Our army is mighty. The veterans from the Chinese campaing will have no trouble with those barbarians. At sunset we will be drinking Sakè in their capitals."
  JAP_going_nowhere_slow:0 "Going Nowhere Slow"
@@ -7168,9 +7169,9 @@ JAP_control_north:0 "Control of Northern Area"
  JAP_kokura:0 "Koishikawa arsenal"
  JAP_kokura_desc:0 "After the First World War, the Imperial Japanese Army Institute of Science was established within the Koishikawa arsenal. In 1937, the Number Nine Research Laboratory was established as a breakaway unit from this station."
  JAP_cas:0 "CAS commitment"
- JAP_cas_desc:0 "In the wake of World War Two the value of carrier aviation was proven repeatedly to the benefit of hard-pressed ground troops who needed close air support (CAS)—defined as air action by aircraft against hostile targets that are in close proximity to friendly forces, and which requires integration of each air mission with fire and movement of these forces."
+ JAP_cas_desc:0 "During the Great War the value of close air support proved of great benefit to the hard-pressed ground troops. Close Air Support (CAS) — defined as the air forces actions against hostile targets in close proximity to friendly land forces, requires close integration of each air mission with the movements of the land forces. Let's further apply these lessons to our own military!"
  JAP_korea_core:0 "Korea"
- JAP_korea_core_desc:0 "Japanese rule over Korea was the outcome of a process that began with the Japan–Korea Treaty of 1876, whereby a complex coalition of the Meiji government, military, and business officials sought to integrate Korea both politically and economically into the Empire of Japan."
+ JAP_korea_core_desc:0 "Japanese rule over Korea was the outcome of a process that began with the Japan–Korea Treaty of 1876, whereby a complex coalition of the Meiji government, military, and business officials sought to integrate Korea both politically and economically into the Empire of Japan. Now the time has come to fully integrate the Peninsula into the empire!"
  JAP_chi_ports:0 "Expand Continental Ports"
  JAP_chi_ports_desc:0 "The ports of the Chinese mainland can be used to harbour our big ships, they will serve as a great resting point hopefully far away from enemy torpedo bombers."
  JAP_shimbu_tai:0 "Shimbu-tai"
