--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
- diff_very_easy_ai:0 "Civilian AI Difficulty"
- diff_easy_ai:0 "Recruit AI Difficulty"
+ diff_very_easy_ai:0 "No Boni For Anyone"
+ diff_easy_ai:0 "Historically Immmersive Difficulty"
  diff_normal_ai:0 "Regular AI Difficulty"
  diff_hard_ai:0 "Veteran AI Difficulty"
  diff_very_hard_ai:0 "Elite AI Difficulty"
@@ -1487,9 +1487,9 @@
  UK_inteligence_1:0 "Empire of Spies"
  UK_inteligence_1_desc:0 "Our empire has great influence in every corner of the world due to our long colonial presence and the widespreadness of our language. Our inteligence agaencies will be able to dominate the world scene if they recieve adequate funding."
  stiff_upper_lip:0 "British Stoicism"
- stiff_upper_lip_desc:0 "If you can keep your head when all about you\nAre losing theirs and blaming it on you,\nIf you can meet with Triumph and Disaster\nAnd treat those two impostors just the same\nYours is the Earth and everything that's in it,\nAnd - which is more - you'll be a Man, my son. "
+ stiff_upper_lip_desc:0 "If you can keep your head when all about you\nare losing theirs and blaming it on you,\nif you can meet with Triumph and Disaster\nand treat those two impostors just the same\nyours is the earth and everything that's in it,\nand - which is more - you'll be a man, my son."
  stiff_upper_lip_2:0 "Improved British Stoicism"
- stiff_upper_lip_2_desc:0 "If you can keep your head when all about you\nAre losing theirs and blaming it on you,\nIf you can meet with Triumph and Disaster\nAnd treat those two impostors just the same\nYours is the Earth and everything that's in it,\nAnd - which is more - you'll be a Man, my son. "
+ stiff_upper_lip_2_desc:0 "If you can keep your head when all about you\nare losing theirs and blaming it on you,\nif you can meet with Triumph and Disaster\nand treat those two impostors just the same\nyours is the earth and everything that's in it,\nand - which is more - you'll be a man, my son."
  trotskyite_plot:0 "Stalin's Paranoia"
  trotskyite_plot_desc:0 "Paranoia and pathological distrust stemming from old power struggles impact the leadership of this nation."
  trotskyite_plot_purged:0 "Aftermath of the Purge"
@@ -5401,7 +5401,6 @@
  BRA_unreliable_army_2_desc:0 "The president has established a firmer grip on the military, allowing for more focus on improving combat capabilities instead of political power plays.\nHowever the involvement of the military in politics is still strong and could be a threat to the current president in the future..."
  BRA_unstable_republic:0 "Second Brazilian Republic"
  BRA_unstable_republic_desc:0 "The Second Brazilian Republic was installed in 1930 and is a balancing act between the coffee oligarchs in the south, the sugar oligarchs in the north and the poor general population."
- 
  BRA_unstable_republic_2:0 "Third Brazilian Republic"
  BRA_unstable_republic_2_desc:0 "President Getulio Vargas has declared a state of emergenecy after a communist coup attempt was discovered. For now the constitution won't be in effect and the president will rule by decree, centralising power in his person."
  BRA_unstable_republic_3:0 "Fourth Brazilian Republic"
