--- a/bicemodded/localisation/english/parties_l_english.yml
+++ b/bicemodded/localisation/english/parties_l_english.yml
@@ -601,7 +601,7 @@
  SAU_neutrality_party:0 "House of Saud"
  YEM_neutrality_party:0 "House of Rassid"
  OMA_neutrality_party:0 "Al Said Dynasty"
- SIK_fascism_party:1 "Young Kashgar Party" #Leader Mahmut Muhiti // Muhammad Amin Bughra, approached the Japanese ambassador in 1935 with "a detailed plan proposing the establishment of an 'Eastern Turkestan Republic' under Japanese sponsorship
+ SIK_fascism_party:1 "Young Kashgar Party" #Leader Mahmut Muhiti // Muhammad Amin Bughra, approached the Japanese ambassador in 1935 with a detailed plan proposing the establishment of an 'Eastern Turkestan Republic' under Japanese sponsorship
  SIK_neutrality_party:0 "KMT"
  SIK_neutrality_party_long:0 "Kuomintang"
  SIK_communism_party:0 "People's Anti-Imperialist Association"
