--- a/bicemodded/localisation/english/traits_l_english.yml
+++ b/bicemodded/localisation/english/traits_l_english.yml
@@ -26,6 +26,8 @@
  tenacious_negotiator:0 "Tenacious Negotiator"
  retired_officer:0 "Retired Officer"
  eager_collaborator:0 "Eager Collaborator"
+ subservient_ultranationalist:0 "Subservient Ultranationalist"
+ national_propagandist:0 "National Propagandist"
  duke_of_orleans:0 "Duke of Orléans"
  hawk:0 "Hawk"
  emergency_powers:0 "Emergency Powers"
