--- a/bicemodded/localisation/english/bramja_DESC_l_english.yml
+++ b/bicemodded/localisation/english/bramja_DESC_l_english.yml
@@ -53,12 +53,6 @@
  GER_peace_with_Finland:0 "Make peace with the Finns"
  GER_peace_with_Finland_desc:0 "As Eastern Europe has been divided and carved up between us and the Soviets, the Finns are left as one of the few nations that continue to resist this new order. Without any hope for significant foreign support anytime soon and the Soviets looking eagerly to their borderlands, continuing the war has little benefit for either side. Perhaps they can still prove usefull to us in the future too..."
  bramja_FIN_GER_Peace_tt:0 "Finland will very likely accept our offer, however you never know with these wonky Northerners..."
- incorporate_Savoy:0 "Pacify the French occupation zone"
- incorporate_Savoy_desc:0 "Let´s Initiate the process to formally annex our ancient Savoyard homelands and the area around it. We still have to work to do in quenching some resistance and integrating the region back into our state. "
- Core_Savoy:0 "Formally annex Savoia, Nizza and the Western Alps "
- Core_Savoy_desc:0 "We shall formally annex Savoia, Nizza and the Western Alps. Italia sarà redenta!"
- Seize_Dalmatia:0 "Assume direct control over Dalamazia"
- Seize_Dalmatia_desc:0 "The Mare Nostrum is our ancient birthright, the entire Adriatic coastline must therefore be in our hands. We can now fully implement the 1915 Treaty of London, graciously relieving our old 'Allies' of any guilt over unkept promises. The Vittoria Mutilata shall be undone! "
  GER_Gau_Silesia_Kattowitz:0 "Integrate Kattowitz into the Gau Oberschlesien"
  GER_Gau_Silesia_Kattowitz_desc:0 "Now that the calm has returned to the region, we shall integrate Kattowitz into the administration of the newly established Gau Oberschlesien (resulting from the division of the Gau Schlesien). Once resistance has been surpressed entirely and proper German ways have been reestablished, it will be a full, integral part of the Reich once more!"
  GER_Integrate_Kattowitz:0 "Heim ins Reich: Oberschlesien"
@@ -67,6 +61,8 @@
  GER_Gau_Silesia_Teschen_desc:0 "Since its separation from Österreich, the former Duchy of Teschen has seen its fair share of conflict, with Czechs and Poles contesting the others control over the region. It became even clearer the last few year that Teschener Schlesien needed to return to Germanien to find prosperity once more. Today is that day!" 
  GER_Integrate_Teschen:0 "Heim ins Reich: Teschener Schlesien"
  GER_Integrate_Teschen_desc:0 "Though it proved more challenging than in most reconquered German lands, Teschen and its surrounding territory has been fully reintregrated! "
+ GER_Claim_Slovenia:0 "Start Germanizing Slovenia"
+ GER_Claim_Slovenia_desc:0 "Now that the former Austrian territory of Slovenia has become part of the [Root.GetNameDef] once again, we should start the pacification of the region to prepare it for full integration."
  GER_Integrate_Slovenia:0 "Heim ins Reich: Krain"
  GER_Integrate_Slovenia_desc:0 "Another piece of the stained legacy of the Great War has been washed away, the Krain has been properly pacified and is ready to become a full part of the 3rd and final Reich!"
  GER_support_reichskommissariats:0 "Support [From.GetNameDef]"
