--- a/bicemodded/localisation/english/frontend_l_english.yml
+++ b/bicemodded/localisation/english/frontend_l_english.yml
@@ -127,10 +127,10 @@
  FE_DIFFICULTY_CUSTOM:1 "Configure custom game rules."
  FE_DIFFICULTY_CUSTOM_BTN:1 "Custom Game Rules"
  FE_DIFFICULTY:0 "Difficulty"
- FE_DIFFICULTY_VERY_EASY:0 "Civilian"
- FE_DIFFICULTY_VERY_EASY_TOOLTIP:0 "§L"We Can Do It!"§!"
- FE_DIFFICULTY_EASY:1 "Recruit"
- FE_DIFFICULTY_EASY_TOOLTIP:0 "§L"I have full confidence in your courage, devotion to duty, and skill in battle. We will accept nothing less than full victory. Good Luck!"§!"
+ FE_DIFFICULTY_VERY_EASY:0 "No Boni"
+ FE_DIFFICULTY_VERY_EASY_TOOLTIP:0 "§L"No Buffs or Debuffs For Anyone! The creators of the Total War Mod advice against using this setting."§!"
+ FE_DIFFICULTY_EASY:1 "Immmersive"
+ FE_DIFFICULTY_EASY_TOOLTIP:0 "§L"Difficulty Setting for a Immmersive Historical Experience. Adviced for Single Player only. The AI still gets a decent amount of buffs to present a challenge/compensate for lack of intelligence, but not to the same degree Total War Mods difficulties normally do. The Player gets a small buff to research speed too here to align closer with history."§!"
  FE_DIFFICULTY_NORMAL:1 "Regular"
  FE_DIFFICULTY_NORMAL_TOOLTIP:0 "§L"For the enemy is strong. He may hurl back our forces. Success may not come with rushing speed, but we shall return again and again."§!"
  FE_DIFFICULTY_HARD:1 "Veteran"
