--- a/bicemodded/localisation/english/state_names_l_english.yml
+++ b/bicemodded/localisation/english/state_names_l_english.yml
@@ -37,8 +37,8 @@
  STATE_36:0 "Friesland"
  STATE_37:0 "Sjaelland"
  STATE_38:0 "Norrland"
- STATE_39:0 "Südtirol"
- STATE_40:0 "Barnaul"
+ STATE_39:0 "Alto Adige & Trentino"
+ STATE_40:1 "Altai Krai"  #Was called Barnaul, as the city in the region
  STATE_41:0 "Madrid"
  STATE_42:0 "Moselland"
  STATE_43:0 "Northern Hungary"
@@ -60,7 +60,7 @@
  STATE_59:0 "Hannover"
  STATE_60:0 "Thüringen"
  STATE_61:0 "Mecklenburg"
- STATE_62:0 "Pommern"
+ STATE_62:1 "Vorpommern"
  STATE_63:0 "Hinterpommern"
  STATE_64:0 "Brandenburg"
  STATE_65:0 "Sachsen"
@@ -83,10 +83,10 @@
  STATE_82:0 "Banat"
  STATE_83:0 "Crisana"
  STATE_84:0 "Transylvania"
- STATE_85:0 "Danzig"
+ STATE_85:0 "Gdansk"
  STATE_86:0 "Poznan"
  STATE_87:1 "Łódz"
- STATE_88:0 "Krakow"
+ STATE_88:1 "Kraków"
  STATE_89:0 "Stanisławów"
  STATE_90:0 "Kielce"
  STATE_91:0 "Lwów"
@@ -155,7 +155,7 @@
  STATE_154:0 "Alföld"
  STATE_155:0 "Transdanubia"
  STATE_156:0 "Calabria"
- STATE_157:0 "Abruzzi"
+ STATE_157:0 "Abruzzo"
  STATE_158:0 "Piemonte"
  STATE_159:0 "Lombardia"
  STATE_160:0 "Veneto"
@@ -163,20 +163,20 @@
  STATE_162:0 "Toscana"
  STATE_163:0 "Zara"
  STATE_164:0 "Dodecanese"
- STATE_165:0 "Catalonia"
- STATE_166:0 "Western Aragon"
+ STATE_165:1 "Cataluña"
+ STATE_166:1 "Western Aragón"
  STATE_167:0 "Valencia"
  STATE_168:0 "Murcia"
- STATE_169:0 "Andalusia"
+ STATE_169:1 "Sevilla"
  STATE_170:0 "Extremadura"
  STATE_171:0 "Galicia"
- STATE_172:0 "Navarre"
+ STATE_172:1 "Navarra"
  STATE_173:0 "Granada"
- STATE_174:0 "Leon"
- STATE_175:0 "La Mancha"
- STATE_176:0 "Castille"
- STATE_177:0 "Balearic Islands"
- STATE_178:0 "Canary islands"
+ STATE_174:1 "León"
+ STATE_175:1 "Ciudad Real"
+ STATE_176:1 "Burgos"
+ STATE_177:1 "Islas Baleares"
+ STATE_178:1 "Islas Canarias"
  STATE_179:0 "Beja"
  STATE_180:0 "Porto"
  STATE_181:0 "Guarda"
@@ -187,7 +187,7 @@
  STATE_186:0 "Peloponnese"
  STATE_187:0 "Aegean Islands"
  STATE_188:0 "Memel"
- STATE_189:1 "Siauliai"
+ STATE_189:2 "Žemaitija"
  STATE_190:0 "Kurzeme"
  STATE_191:0 "Tartu"
  STATE_192:0 "Odessa"
@@ -232,10 +232,10 @@
  STATE_231:0 "Georgia"
  STATE_232:0 "Grozny"
  STATE_233:0 "Caucasus Mountains"
- STATE_234:0 "Krasnodar"
+ STATE_234:1 "Krasnodar"
  STATE_235:0 "Stavropol"
  STATE_236:0 "Astrakhan"
- STATE_237:0 "Elista"
+ STATE_237:1 "Kalmykia" #Was Elista, but that is the vps name, and the state is that of Kalmykia
  STATE_238:0 "Volgodonsk"
  STATE_239:0 "Saratov"
  STATE_240:0 "Belgorod"
@@ -249,12 +249,12 @@
  STATE_248:0 "Yaroslavl"
  STATE_249:0 "Kazan"
  STATE_250:0 "Ulyanovsky"
- STATE_251:0 "Kuibyshev"
- STATE_252:0 "Gorki"
+ STATE_251:1 "Kuybyshev"
+ STATE_252:1 "Gorky"
  STATE_253:0 "Ivanovo"
  STATE_254:0 "Ryazan"
  STATE_255:0 "Penza"
- STATE_256:0 "Cheboksary"
+ STATE_256:1 "Chuvashia" #Was Cheboksary, but os now named after the Republic the state represents
  STATE_257:0 "Tambov"
  STATE_258:0 "Lipetsk"
  STATE_259:0 "Poltava"
@@ -397,7 +397,7 @@
  STATE_396:0 "Indiana"
  STATE_397:0 "Syktyvkar"
  STATE_398:0 "Perm"
- STATE_399:0 "Izhevsk"
+ STATE_399:1 "Udmurtia" #Was Izhevsk, but was renamed to that of the republic it represents
  STATE_400:0 "Kirov"
  STATE_401:0 "Engels"
  STATE_402:0 "Akhtubinsk"
@@ -405,7 +405,7 @@
  STATE_404:0 "Kyzyl Orda"
  STATE_405:0 "Tashkent"
  STATE_406:1 "Guryev"
- STATE_407:0 "Uralsk"
+ STATE_407:1 "Ural'sk"
  STATE_408:0 "Vladivostok"
  STATE_409:0 "Khabarovsk"
  STATE_410:0 "Sistan"
@@ -495,15 +495,15 @@
  STATE_494:0 "Ucayali"
  STATE_495:0 "Amazonas"
  STATE_496:1 "Minas Gerais"
- STATE_497:0 "Maranhao"
- STATE_498:0 "Rio Grande"
+ STATE_497:1 "Maranhão"
+ STATE_498:1 "Rio Grande do Norte"
  STATE_499:0 "Bahia"
  STATE_500:0 "Rio de Janeiro"
- STATE_501:0 "Sao Paulo"
- STATE_502:0 "Rio Grande Sul"
+ STATE_501:1 "São Paulo"
+ STATE_502:1 "Rio Grande do Sul"
  STATE_503:0 "Santa Catarina"
- STATE_504:0 "Iguacu"
- STATE_505:0 "Goias"
+ STATE_504:1 "Iguaçú"
+ STATE_505:1 "Goiás"
  STATE_506:0 "Antofagasta"
  STATE_507:0 "Magallanes"
  STATE_508:0 "Tucuman"
@@ -562,7 +562,7 @@
  STATE_561:0 "Amur"
  STATE_562:0 "Okhotsk"
  STATE_563:0 "Chita"
- STATE_564:0 "Ulan Ude"
+ STATE_564:1 "Buryatia" #Was Ulan Ude, but the vp is now called that, so the state is now named after the repubic
  STATE_565:0 "Bodaybo"
  STATE_566:0 "Irkutsk"
  STATE_567:0 "Bratsk"
@@ -581,7 +581,7 @@
  STATE_580:0 "Tobolsk"
  STATE_581:0 "Northern Urals"
  STATE_582:0 "Magnitogorsk"
- STATE_583:0 "Kustanay"
+ STATE_583:1 "Kostanay"
  STATE_584:0 "Ashkhabad"
  STATE_585:0 "Urgench"
  STATE_586:0 "Alma-Ata"
@@ -652,7 +652,7 @@
  STATE_651:0 "Ufa"
  STATE_652:0 "Orenburg"
  STATE_653:0 "Sverdlovsk"
- STATE_654:0 "Gorno-Altaysk"
+ STATE_654:1 "Oyrot Region" #(Was Gorno-Altaysk), was renamed to Gorno-Altaysk in 1948
  STATE_655:0 "North Sakhalin"
  STATE_656:0 "Kuwait"
  STATE_657:0 "Birobidzhan"
@@ -733,7 +733,7 @@
  STATE_732:0 "Pamir"
  STATE_733:0 "Andaman"
  STATE_734:0 "Nendo"
- STATE_735:0 "Savoy"
+ STATE_735:0 "Savoie"
  STATE_736:0 "Istria"
  STATE_737:0 "Bismarck"
  STATE_738:0 "Aru Islands"
@@ -787,15 +787,15 @@
  STATE_786:0 "Mauritanian Desert"
  STATE_787:0 "Northern Kashmir"
  STATE_788:0 "Salamanca"
- STATE_789:0 "Cordoba"
+ STATE_789:0 "Córdoba"
  STATE_790:0 "Asturias"
  STATE_791:0 "Valladolid"
- STATE_792:0 "Basque Country"
+ STATE_792:0 "País Vasco"
  STATE_793:0 "Guadalajara"
- STATE_794:0 "Eastern Aragon"
- STATE_795:0 "Santarem"
- STATE_796:0 "Impassable Burma Mountains"
- STATE_797:0 "Constantinople"
+ STATE_794:0 "Eastern Aragón"
+ STATE_795:0 "Santarém"
+ STATE_796:0 "Burmese Mountains"
+ STATE_797:0 "Istanbul"
  STATE_798:0 "Amasya"
  STATE_799:0 "Hatay"
  STATE_800:0 "Van"
