supply north africa usa ai WIP changes

--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
- diff_very_easy_ai:0 "No Boni For Anyone"
- diff_easy_ai:0 "Historically Immmersive Difficulty"
+ diff_very_easy_ai:0 "Player Bonuses"
+ diff_easy_ai:0 "No Bonuses AI"
  diff_normal_ai:0 "Regular AI Difficulty"
  diff_hard_ai:0 "Veteran AI Difficulty"
  diff_very_hard_ai:0 "Elite AI Difficulty"
