--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -1318,6 +1318,7 @@
  great_depression_V:0 "The Great Depression"
  great_depression_V_desc:0 "Although a worldwide phenomenon, the Great Depression started with a stock market crash in the United States and has caused unemployment rates to soar and tax revenue to plummet. The rising instability on the world arena has created a huge demand for US arms and aircrafts, the industry is finally able to gear up. §RWill be removed with the Arsenal of Democracy focus.§!\n"
  second_new_deal:0 "Second New Deal"
+ USA_ai_handicap:0 "Surge in Production"
  USA_wpa_idea:0 "WPA"
  USA_wpa_idea_desc:0 "The Work Progress Administration is putting millions of people to work rebuilding America."
  USA_social_security_idea:0 "Social Security"
