--- a/bicemodded/localisation/english/frontend_l_english.yml
+++ b/bicemodded/localisation/english/frontend_l_english.yml
@@ -127,16 +127,16 @@
  FE_DIFFICULTY_CUSTOM:1 "Configure custom game rules."
  FE_DIFFICULTY_CUSTOM_BTN:1 "Custom Game Rules"
  FE_DIFFICULTY:0 "Difficulty"
- FE_DIFFICULTY_VERY_EASY:0 "No Boni"
- FE_DIFFICULTY_VERY_EASY_TOOLTIP:0 "§L"No Buffs or Debuffs For Anyone! The creators of the Total War Mod advice against using this setting."§!"
- FE_DIFFICULTY_EASY:1 "Immmersive"
- FE_DIFFICULTY_EASY_TOOLTIP:0 "§L"Difficulty Setting for a Immmersive Historical Experience. Adviced for Single Player only. The AI still gets a decent amount of buffs to present a challenge/compensate for lack of intelligence, but not to the same degree Total War Mods difficulties normally do. The Player gets a small buff to research speed too here to align closer with history."§!"
+ FE_DIFFICULTY_VERY_EASY:0 "Civilian"
+ FE_DIFFICULTY_VERY_EASY_TOOLTIP:0 "§L"Bonuses for player and no bonuses for AI except game-engine limitation band-aids! I am disappoint son, shameful display!"§!"
+ FE_DIFFICULTY_EASY:1 "Recruit"
+ FE_DIFFICULTY_EASY_TOOLTIP:0 "§L"Difficulty Setting for a Immmersive Historical Experience. Adviced for Single Player only. The AI still gets a decent amount of bonuses to present a challenge/compensate for lack of AI implementation for basic game elements, but not to the same degree Total War Mods difficulties normally do."§!"
  FE_DIFFICULTY_NORMAL:1 "Regular"
  FE_DIFFICULTY_NORMAL_TOOLTIP:0 "§L"For the enemy is strong. He may hurl back our forces. Success may not come with rushing speed, but we shall return again and again."§!"
  FE_DIFFICULTY_HARD:1 "Veteran"
  FE_DIFFICULTY_HARD_TOOLTIP:1 "§L"Thirty years from now when you're sitting by your fireside with your grandson on your knee and he asks, 'What did you do in the great World War Two?' you won't have to cough and say, 'Well, your granddaddy shoveled shit in Louisiana.'"§!"
  FE_DIFFICULTY_VERY_HARD:0 "Elite"
- FE_DIFFICULTY_VERY_HARD_TOOLTIP:1 "§L"I have nothing to offer but blood, toil, tears, and sweat."§!"
+ FE_DIFFICULTY_VERY_HARD_TOOLTIP:1 "§L"Hold my beer."§!"
  FE_DIFFICULTY_UNKNOWN:0 "Secret Difficulty"
  FE_DIFFICULTY_MODIFIER_PLAYER_TOOLTIP:0 "\n\nPlayer:\n$PLAYERMOD$"
  FE_DIFFICULTY_MODIFIER_AI_TOOLTIP:0 "\n\nAI:\n$AIMOD$"
