--- a/bicemodded/localisation/english/TW_events_l_english.yml
+++ b/bicemodded/localisation/english/TW_events_l_english.yml
@@ -236,6 +236,10 @@
  news.4002.d:0 "The long meeting 'night of the grand council' has led to the fall of the fascist Italian regime! Plots led by Count Dino Grandi and King Victor Emmanuel III have been able to persuade enough top ranking members of the fascist party to imprison [ITA.GetLeader] and start negotiate an armistice!"
  news.4002.a:0 "The soft underbelly of Europe"
  
+ news.4003.t:0 "French Somaliland Revolts"
+ news.4003.d:0 "After the fall of Italian East Africa the garrison in Djibouti has taken the chance to rise up and switch sides to the forces of Free France."
+ news.4003.a:0 "Okay"
+ 
  news.403.t:0 "Japan strikes the USA"
  news.403.d:0 "Yesterday the coded message Niitakayama Nobore (“Climb Mount Niitaka“) arrived on Nagumo’s flagship. The Admiral then opened a set of top secret documents which confirmed that Japan would be going to war with the United States, Britain, and Holland.  It also gave a date for the opening of hostilities: December 8th (the 7th on the Pearl Harbor side of the International Date Line). The stage was set unless the U.S. discovered Kido Butai, Pearl Harbor was squarely centred in the Japanese bullseye."
  news.405.t:0 "The British Empire lost Egypt!"
@@ -794,6 +798,7 @@
  bulgaria.6.d:0 "With the most recent Chaos in the Balkans Germany wants to make sure that there will be peace in the future. So they offer us to work together! But if we don't accept there offer they will probably think that we work with the allies and might attack us!"
  bulgaria.6.a:0 "Yes, we must accept."
  bulgaria.6.b:0 "No, we will never accept this."
+ bulgaria.6.c:0 "We need a compromise."
  
  bulgaria.7.t:0 "The Ulimatum of Dobrudja"
  bulgaria.7.d:0 "The Bulgarians have sent an Ultimatum through their diplomatic envoy in regards to the status of the territory of Dobrudja which we control. This has been coupled with an increasing hostile posture over the past few weeks, and military exercises in an attempt to scare us. What shall our response to this braven letter be?"
