--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -1981,8 +1981,12 @@
  advanced_depth_charges_desc:1 "A mortar on board the destroyer can throw an explosive charge much further, allowing the ship to maintain sonar contact with the submarine throughout the attack and dramatically increasing its accuracy.\n\nMounting this module on §YLight Ships§! and §YCruisers§! will allow them to attack enemy §YSubmarines§!."
  modern_depth_charges:0 "Improved Depth Charge Mortar"
  modern_depth_charges_desc:1 "A larger propellant charge throws a proper depth charge set to a specific depth at a submarine from quite a distance.\n\nMounting this module on §YLight Ships§! and §YCruisers§! will allow them to attack enemy §YSubmarines§!."
+ basic_airplane_launcher:0 "Basic Airplane Catapult"
+ basic_airplane_launcher_desc:1 "Airplanes that are light enough can be launched by a catapult mounted on the ship. \n\nMounting this module on §YCruisers§!, §YHeavy Ships§! or specialized §YSubmarines§! improves their ability to detect enemy ships."
  improved_airplane_launcher:0 "Improved Airplane Catapult"
  improved_airplane_launcher_desc:1 "An improved pneumatic mechanism allows much larger airplanes to be launched via catapult. This increases their search radius. \n\nMounting this module on §YCruisers§!, §YHeavy Ships§! or specialized §YSubmarines§! improves their ability to detect enemy ships."
+ advanced_airplane_launcher:0 "Advanced Airplane Catapult"
+ advanced_airplane_launcher_desc:1 "With an advanced design we can launch airplanes with a higher speed. This enables us to lauch planes that require higher take-off speed. \n\nMounting this module on §YCruisers§!, §YHeavy Ships§! or specialized §YSubmarines§! improves their ability to detect enemy ships."
  airplane_launcher_advice_tt:0 "\nMounting a §YCatapult§! module on §YCruisers§!, §YHeavy Ships§! or specialized §YSubmarines§! improves their ability to detect enemy ships."
  cruiser_armor_advice_tt:0 "\nMounting a better §YArmor§! module on §YCruisers§! improves their ability to withstand damage."
  heavy_armor_advice_tt:0 "\nMounting a better §YArmor§! module on §YHeavy Ships§! improves their ability to withstand damage. §YBattleships§! and §YBattlecruisers§! are defined by their different §YArmor Schemes§!, with Battlecruisers generally having worse armour."
