--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -647,10 +647,15 @@
  GER_unlock_paratroopers_tt:0 "Gain a template with §Y8 Paratroopers§! and §Y2 Pack Artillery§! battalions.\n"
  GER_paratroopers:0 "Fallschirmjäger"
  GER_paratroopers_desc:0 "The Fallschirmjäger were the paratrooper branch of the German Luftwaffe and came to be known as the "green devils" by the Allied forces they fought against. They often fought as commando raiders rather than in large scale paratrooping operations."
-
+ 
+ GER_generalgouvernement:0 "Generalgouvernement"
+ GER_generalgouvernement_desc:0 ""
  GER_autobahn:0 "Reichsautobahn"
  GER_autobahn_tt:0 "Add maximum §YInfrastructure§! in §YBrandenburg§!, §YHannover§!, §YThüringen§! and §YFranken§!"
  GER_autobahn_desc:0 "Since its inception in 1933, the autobahn project has been a glorious success. The construction efforts have reduced unemployment, and the wide roads stand as a monument to German economic recovery. Much work remains to be done, however."
+ GER_bohemia_autobahn:0 "Berlin-Prague Autobahn Extension"
+ GER_bohemia_autobahn_tt:0 "Sets level 9 §YInfrastructure§! along the route."
+ GER_bohemia_autobahn_desc:0 "Since its inception in 1933, the autobahn project has been a glorious success. The construction efforts have reduced unemployment, and the wide roads stand as a monument to German economic recovery. The route from Berlin to Prague will help integrate the two large industrial areas."
  GER_Goering_Plan:0 "Goering's Four Year Plan"
  GER_Goering_Plan_desc:0 "The Four Year Plan was an economic initiative which Hitler started. It involved, amongst other things, reducing unemployment and undertaking public works projects such as the German Autobahnen. Hermann Goering was chosen to see the plan brought into action."
  GER_reichsarbeitsdienst:0 "Reichsarbeitsdienst"
