ship speed armor deflection 33% instead of 30

--- a/bicemodded/localisation/english/terrain_l_english.yml
+++ b/bicemodded/localisation/english/terrain_l_english.yml
@@ -13,8 +13,8 @@
  mountain_desc:0 ""
  plains:0 "Plains"
  plains_desc:0 ""
- urban:0 "§MLarge City§!"
- urban_desc:0 "\n§LUrbanization with more than 280.000 population§!. §LStrategically important, sometimes they are very industrialized too.§!" 	
+ urban:0 "Large City"
+ urban_desc:0 "\n§gUrbanization with more than 280.000 population§!. §LStrategically important, sometimes they are very industrialized too.§!" 	
  jungle:0 "Jungle"
  jungle_desc:0 ""
  marsh:0 "Marsh"
@@ -31,10 +31,10 @@
  water_arctic_desc:0 ""
  UNIT_TERRAIN_MODIFIER:0 "Unit effects:"
  #Tahls Better Map
- metropoliscity:0 "§MMetropolis§!"
- metropoliscity_desc:0 "\n§LLarge, dense and populated city with over 1.5 million inhabitants.\nVery important centers of economical and political control.§!"
- village:0 "§MSmall City§!"
- village_desc:0 "\n§LUrbanization with at least 100.000 inhabitants.§!"
+ metropoliscity:0 "Metropolis"
+ metropoliscity_desc:0 "\n§gLarge and densely populated city with over 1.5 million inhabitants.\nVery important centers of economical and political control.§!"
+ village:0 "Small City"
+ village_desc:0 "\n§gUrbanization with at least 100.000 inhabitants.§!"
  urbanregion:0 "Urban Area"
  urbanregion_desc:0 "\n§gUrbanized region.§!"
  MOVEMENT_COST:0 "Movement cost within this terrain type x$VALUE|H$"
