--- a/bicemodded/localisation/english/events_l_english.yml
+++ b/bicemodded/localisation/english/events_l_english.yml
@@ -4031,6 +4031,14 @@
  poland.89.d:0 "There is nothing worse than some soviet threatening to be at war with us again..."
  poland.89.a:0 "Is that what Pilsudzki would want?"
  
+ 
+ poland.90.t:0 "Poland devastated by war!"
+ poland.90.d:0 ".."
+ poland.90.a:0 "Okay"
+ 
+ poland.91.t:0 "Poland devastated by war!"
+ poland.91.d:0 ".."
+ 
  czech.35.t:0 "Czechoslovakia Asks for Arms"
  czech.35.d:0 "Czechoslovakia, our indirect ally is asking for arms from our nation, we might want to give them arms at a cost of political efforts to keep the peace in europe."
  czech.35.a:0 "Give them the Arms"
