--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -64,6 +64,10 @@
  
  interwar_antiair:0 "Anti-Air Machine Gun"
  
+ GER_rebuild_pol_mil:0 "Rebuild Military Instalations"
+ GER_rebuild_pol_mil_desc:0 ""
+ GER_rebuild_pol_civ:0 "Rebuild Civilian Infrastructure"
+ GER_rebuild_pol_civ_desc:0 ""
  GER_aces_high:0 "German Aces"
  GER_aces_high_desc:0 "Just like during the Great War, we shall dominate the skies!"
  GER_airbases:0 "Lufthansa Expansion"
