--- a/bicemodded/localisation/english/equip_air_l_english.yml
+++ b/bicemodded/localisation/english/equip_air_l_english.yml
@@ -10,7 +10,7 @@
  #GER Planes
  henschel_equipment:0 "Henschel CAS"
  henschel_equipment_desc:0 "Close Air Support planes are designed to provide support in land combats."
- heinkel_fw_equipment:0 "Fighter Equipment"
+ heinkel_fw_equipment:0 "Fighters"
  heinkel_fw_equipment_desc:0 "Light Fighters are fast and nimble and can do many jobs. Everything from fighting for air superiority, protect your bombers and intercept the enemies bombers."
  
  fighter_equipment:0 "Fighters"
@@ -56,10 +56,7 @@
  light_bomber:0 "Light Bombers"
  fighter:0 "Fighters"
  
- GER_fighter:0 "Messerschmitt Fighters"
- GER_fighter_equipment_desc:0 "Light Fighters are fast and nimble and can do many jobs. Everything from fighting for air superiority, protect your bombers and intercept the enemies bombers."
  jet_fighter:0 "Jet Fighters"
- 
  cas:1 "Close Air Support"
  
  nav_bomber:0 "Naval Bomber"
