--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -298,7 +298,7 @@
  hmg_4_desc:0 "With increased range and accuracy the machine gun can become more versatile."
  hmg_5:0 "Modern HMG"
  hmg_5_desc:0 "With the increased use of assault rifles, developing reliable automatic weapons that can be used in any environment by all soldiers is a priority for a modern army."
- GER_hmg:0 "HMG Teams - MG 34"
+ GER_hmg:0 "Basic HMG Teams - MG 34"
  GER_hmg_2:0 "Improved HMG Teams - MG 34 B"
  GER_hmg_3:0 "HMG Teams - MG 39"
  GER_hmg_4:0 "Advanced HMG - MG 42"
@@ -312,21 +312,21 @@
  mortars_4_desc:0 "More compact mortars."
  mortars_5:0 "Late War Mortar Team"
  mortars_5_desc:0 "More shell types."
- GER_mortars:0 "Mortar team - 8cm GrW 34"
+ GER_mortars:0 "Basic Mortar team - 8cm GrW 34"
  GER_mortars_2:0 "Improved Mortar team - 8cm GrW II"
  GER_mortars_3:0 "Advanced Mortar team - 10cm GrW"
- GER_mortars_4:0 "Mortar team - 12cm GrW 42"
+ GER_mortars_4:0 "Late War Mortar team - 12cm GrW 42"
  sniper_team:0 "Sniper Teams"
  sniper_team_desc:0 "Sniper Teams"
  explosives_team:0 "Explosives Teams"
  explosives_team_desc:0 "Explosives Teams"
- tech_Headquarters:0 "Improved Headquarters Command" 
+ tech_Headquarters:0 "Basic Headquarters Command" 
  tech_Headquarters_desc:0 "Improved Divisional Headquarters Command" 
- tech_Headquarters2:0 "Headquarters Command " 
+ tech_Headquarters2:0 "Improved Headquarters Command" 
  tech_Headquarters2_desc:0 "Improved Corps Headquarters Command" 
- tech_Headquarters3:0 "Headquarters Command " 
+ tech_Headquarters3:0 "Advanced Headquarters Command" 
  tech_Headquarters3_desc:0 "Improved Army Headquarters Command" 
- tech_Garrison:0 "Garrisons" 
+ tech_Garrison:0 "Basic Garrisons" 
  tech_Garrison_desc:0 "Garrison is the collective term for a body of troops stationed in a particular location, originally to guard it, but now often simply using it as a home base. The garrison is usually in a city, town, fort, castle, ship or similar. "Garrison town" is a common expression for any town that has a military base nearby." 
  tech_Garrison_2:0 "Improved Garrisons" 
  tech_Garrison_2_desc:0 "By improving the equipment and tactics used for our garrison units they can better counter the new threats on the battlefield." 
@@ -334,13 +334,13 @@
  tech_Garrison_3_desc:0 "Garrison units will be trained to better setup defensive lines and makeshift fortifications."
  tech_Garrison_4:0 "Modern Garrisons" 
  tech_Garrison_4_desc:0 "Garrison units can be more efficient at remote defenses than any other, improved training and discipline creates and organized defensive structure.."
- tech_flamethrower_squad:0 "Flamethrower Squad"
+ tech_flamethrower_squad:0 "Basic Flamethrower Squad"
  tech_flamethrower_squad_desc:0 "§YEngineer§!\n Fort: Attack §G5%§!\n §CUrban§!: Attack §G5%§!\n §CVillage§!: Attack §G5%§!\n §CMetropolis§!: Attack §G5%§!\n"
- tech_flamethrower_squad2:0 "Flamethrower Squad 2"
+ tech_flamethrower_squad2:0 "Improved Flamethrower Squad"
  tech_flamethrower_squad2_desc:0 "With the power of fire at the muzzle of their weapons, flamethrower squads are a threat to be reckoned with for any defenders of static positions. Any fortifications can easily be cleared by deploying a team of engineers equipped with flamethrowers, and the once safe entrenchment will turn into the defenders' fiery tomb."
- tech_pontoon_bridge:0 "Mobile Pontoon bridges"
+ tech_pontoon_bridge:0 "Basic Mobile Pontoon bridges"
  tech_pontoon_bridge_desc:0 "To quickly cross rivers we need sturdy, light and reliable bridges that can be assembled on site as fast as possible."
- tech_pontoon_bridge2:0 "Mobile Pontoon Bridges II"
+ tech_pontoon_bridge2:0 "Improved Mobile Pontoon Bridges"
  tech_pontoon_bridge2_desc:0 "With the ongoing war effort we've developed new ways of deploying mobile bridges that are more suitable in combat, this in turn will make offensive actions over rivers more easy to perform."
  subtech_recon_cav_1:0 "Cavalry Recon Units"
  subtech_recon_cav_1_desc:0 "By giving our Recon Units some mobility with horses we can increase their potential."
