--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -9208,6 +9208,8 @@ NZL_cavalry_tank_equipment_0_desc:0 "This is a further rework of the stopgap pro
  GER_amphibious_mechanized_equipment_1_short:0 "LWS"
  GER_amphibious_mechanized_equipment_2:0 "Land-Wasser-Schlepper II"
  GER_amphibious_mechanized_equipment_2_short:0 "LWS II"
+ GER_amphibious_mechanized_equipment_3:0 "Land-Wasser-Schlepper III"
+ GER_amphibious_mechanized_equipment_3_short:0 "LWS III"
  USA_amphibious_mechanized_equipment_1:0 "LVT-2"
  USA_amphibious_mechanized_equipment_1_short:0 "LVT-2"
  USA_amphibious_mechanized_equipment_2:0 "LVT-4 Buffalo"
