germany and bugfixes

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -648,7 +648,7 @@
  GER_Landungstruppen:0 "Landungs-Division"
  GER_Landungstruppen_desc:0 "Form a Landungs-Division!\n"
 
- GER_unlock_paratroopers_tt:0 "Gain a template with §Y8 Paratroopers§! and §Y2 Pack Artillery§! battalions.\n"
+ GER_unlock_paratroopers_tt:0 "Gain a well trained fallschirmjäger division with §Y8 Paratroopers§! and §Y2 Pack Artillery§! battalions.\n"
  GER_paratroopers:0 "Fallschirmjäger"
  GER_paratroopers_desc:0 "The Fallschirmjäger were the paratrooper branch of the German Luftwaffe and came to be known as the "green devils" by the Allied forces they fought against. They often fought as commando raiders rather than in large scale paratrooping operations."
  
