--- a/bicemodded/localisation/english/production_l_english.yml
+++ b/bicemodded/localisation/english/production_l_english.yml
@@ -3,7 +3,7 @@
  PRODUCTION_EQUIPMENTPOOL_LABEL:0 "Storage"
  PRODUCTION_EFFICIENCY_LABEL:0 "§TEfficiency§!"
  PRODUCTION_EQUIPMENT_LABEL:0 "Equipment"
- PRODUCTION_ADJUSTERS_LABEL:0 "Adjusters"
+ PRODUCTION_ADJUSTERS_LABEL:0 "Terrain Modifiers"
  PRODUCTION_MATERIALS_LABEL:0 "Materials"
  PRODUCTION_FACTORIES_LABEL:0 "Factories"
  PRODUCTION_OPERATIONAL_ARMS_FACTORIES_LABEL:0 "Military Factories"
