--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1061,8 +1061,12 @@
  GER_anti_air_as_anti_tank_weapon_effect_create_variant:0 "This will also create a variant greatly improving the Piercing of the heavy AA equipment!"
  anti_air_as_anti_tank_weapon:0 "Use Anti-Air on Tanks"
  anti_air_as_anti_tank_weapon_desc:0 "By using a our Heavy Anti-Air Guns we can pierce heavy enemy Tanks!"
+ GER_bewegungskrieg:0 "Bewegungskrieg"
+ GER_bewegungskrieg_desc:0 "“Bewegungskrieg”, or “lightning war”, advocates the usage of highly-concentrated mobile firepower that can exploit breakthroughs and quickly conduct full combined arms operation deep into enemy territory. We should move to quickly adopt this revolutionary doctrine since the painful memories of sluggish trench warfare from the Weltkrieg are still fresh on the minds of our people and the Oberkommando der Wehrmacht."
  GER_auftragstaktik:0 "Auftragstaktik"
  GER_auftragstaktik_desc:0 "Heinz Guderian and other radical theorists are pushing for daring new doctrines emphasizing communication, identification of 'schwerpunkte' and local concentrations of combined arms forces. Giving them free reins might help avoid the meat grinder horrors of the Great War."
+ GER_befehlstaktik:0 "Befehlstaktik"
+ GER_befehlstaktik_desc:0 ""
  GER_nachtjaeger:0 "Nachtgefecht"
  GER_nachtjaeger_desc:0 "By giving our soldiers the ability to see at night we can greatly improve the effectiveness of our army!"
  GER_increase_offensive_capability:0 "Increase Our Offensive Capability"
