--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -817,6 +817,7 @@
  GER_wunderwaffe:0 "Wunderwaffe"
  GER_wunderwaffe_desc:0 "Heisenberg and von Braun are chomping at the bit to explore certain ideas they have for true doomsday weapons. All they need is extra resources..."
  GER_air_commanders_tt:0 "You will receive a §Y4 Skill§! §GWar Hero§! and §GAirforce Background§! §CCorps Commander§! Albert Kesselring.\n and a §Y3 Skill§! §GArmor Officer§! and §GAirforce Background§! §CCorps Commander§! Geyr Von Schweppenburg.\n and a §Y4 Skill§! §GCommando§! and §GAirforce Background§! §CCorps Commander§! Kurt Student.\n"
+ GER_mounaineer_commanders_tt:0 "You will receive a §Y4 Skill§! §GWar Hero§! and §GMountaineer§! §CCorps Commander§! Albert Kesselring.\n"
  GER_mol_rib_pact:0 "Molotov-Ribbentrop Pact"
  GER_mol_rib_pact_desc:0 "A treaty of friendship and non-aggression with the USSR might turn the stomach, but it will allow their precious oil to keep flowing into Germany. The secret addendum will divide the territories of Romania, Poland, Lithuania, Latvia, Estonia and Finland into German and Soviet spheres of influence..."
  GER_mol_rib_pact_tt:0 "Enter into a §Ynon-aggression pact§! with §YSoviet Union§! and agree to §Ydivide Poland§! between Soviet Union and Germany\n"
