--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1070,8 +1070,8 @@
  GER_befehlstaktik_desc:0 ""
  GER_nachtjaeger:0 "Nachtgefecht"
  GER_nachtjaeger_desc:0 "By giving our soldiers the ability to see at night we can greatly improve the effectiveness of our army!"
- GER_increase_offensive_capability:0 "Increase Our Offensive Capability"
- GER_increase_offensive_capability_desc:0 ""
+ GER_increase_offensive_capability:0 "Panzergrenadiers"
+ GER_increase_offensive_capability_desc:0 "Bewegungskrieg is the center of our doctrine, the pinnacle of German strategy. However, tanks alone cannot break the front line. Our mobile force needs infantry to accompany them to secure sectors, defend the flanks and provide support. Recently, one of our generals has come up with an idea of how do deal with this. He says we should mechanize some of our troops, to allow them to keep up with the tanks, yet pack the same punch. He says we would call them Panzergrenadiers, and they would be an elite force of men. This idea has gathered support, and many are calling on us to agree."
  GER_die_abwehr:0 "Die Abwehr"
  GER_die_abwehr_desc:0 "The Abwehr was the German military intelligence organisation which existed from 1920 in the Reichswehr and Wehrmacht; it was divided into five departments covering the following aspects: covert intelligence collection abroad; espionage; sabotage and subversion; counter-intelligence; and administration, archives, and personnel."
  GER_modernize_support:0 "Modernize Support Weaponry and Equipment"
