--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -817,7 +817,7 @@
  GER_wunderwaffe:0 "Wunderwaffe"
  GER_wunderwaffe_desc:0 "Heisenberg and von Braun are chomping at the bit to explore certain ideas they have for true doomsday weapons. All they need is extra resources..."
  GER_air_commanders_tt:0 "You will receive a §Y4 Skill§! §GWar Hero§! and §GAirforce Background§! §CCorps Commander§! Albert Kesselring.\n and a §Y3 Skill§! §GArmor Officer§! and §GAirforce Background§! §CCorps Commander§! Geyr Von Schweppenburg.\n and a §Y4 Skill§! §GCommando§! and §GAirforce Background§! §CCorps Commander§! Kurt Student.\n"
- GER_mounaineer_commanders_tt:0 "You will receive a §Y4 Skill§! §GWar Hero§! and §GMountaineer§! §CCorps Commander§! Albert Kesselring.\n"
+ GER_mounaineer_commanders_tt:0 "You will receive a §Y4 Skill§! §GWar Hero§!, §GMountaineer§! and §GRanger§! §CCorps Commander§! Eduard Dietl.\n"
  GER_mol_rib_pact:0 "Molotov-Ribbentrop Pact"
  GER_mol_rib_pact_desc:0 "A treaty of friendship and non-aggression with the USSR might turn the stomach, but it will allow their precious oil to keep flowing into Germany. The secret addendum will divide the territories of Romania, Poland, Lithuania, Latvia, Estonia and Finland into German and Soviet spheres of influence..."
  GER_mol_rib_pact_tt:0 "Enter into a §Ynon-aggression pact§! with §YSoviet Union§! and agree to §Ydivide Poland§! between Soviet Union and Germany\n"
@@ -1068,6 +1068,8 @@
  GER_auftragstaktik_desc:0 "Heinz Guderian and other radical theorists are pushing for daring new doctrines emphasizing communication, identification of 'schwerpunkte' and local concentrations of combined arms forces. Giving them free reins might help avoid the meat grinder horrors of the Great War."
  GER_befehlstaktik:0 "Befehlstaktik"
  GER_befehlstaktik_desc:0 ""
+ GER_gebirgs:0 "Gebirgsjäger"
+ GER_gebirgs_desc:0 "Gebirgsjäger are the light infantry part of the alpine or mountain troops of Germany, Austria and Switzerland."
  GER_nachtjaeger:0 "Nachtgefecht"
  GER_nachtjaeger_desc:0 "By giving our soldiers the ability to see at night we can greatly improve the effectiveness of our army!"
  GER_increase_offensive_capability:0 "Panzergrenadiers"
